examples/errors/gt.spl
main() {
    if (3 > True) {}
}